@@ -232,7 +232,7 @@ public class Site2DRuleTest extends EasyMockSupport {
     expect(fe.getSource()).andReturn(source);
     expect(source.getName()).andReturn("seses");
     expect(methods.createCatalogEntry(fe)).andReturn(catalogEntry);
-    expect(catalogEntry.getAttribute("/dataset1/where/elangle")).andReturn(new Double(0.5));
+    expect(catalogEntry.getAttribute("/dataset1/where/elangle")).andReturn(Double.valueOf(0.5));
     expect(fe.getUuid()).andReturn(ruid).anyTimes();
     
     replayAll();
@@ -288,7 +288,7 @@ public class Site2DRuleTest extends EasyMockSupport {
     expect(fe.getSource()).andReturn(source);
     expect(source.getName()).andReturn("seses");
     expect(methods.createCatalogEntry(fe)).andReturn(catalogEntry);
-    expect(catalogEntry.getAttribute("/dataset1/where/elangle")).andReturn(new Double(1.5));
+    expect(catalogEntry.getAttribute("/dataset1/where/elangle")).andReturn(Double.valueOf(1.5));
     expect(fe.getUuid()).andReturn(ruid).anyTimes();
     
     replayAll();
